# todolist

./: .env.example  docker-compose.yaml  pyproject.toml
core/: admin.py
core/migrations/: 0001_initial.py
todolist/: settings.py
